[package]
name = "open-file"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Opening file in editor"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/open-file"
repository = "https://github.com/deadblackclover/open-file"
keywords = ["editor", "file"]
categories = ["filesystem", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
